--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
         #      aws cloudformation deploy \
                # --template-file template.yml \
                # --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-               # --region ap-south-1
+               # --region ap-sout
    configure_infrastructure: 
       docker:
         - image: python:3.7-alpine3.11
