--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
         - run:
             name: Install Python
             command: |
-              apk add py3-pip 
+              apk add python3-apt
         - run:
             name: Install Ansible
             command: |
