--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
         - run:
             name: Install Python
             command: |
-              apk add --update python3 py3-pip
+              apk add py3-pip
         - run:
             name: Install Ansible
             command: |
